--- a/assets/index-kblmFbJm.css
+++ b/assets/index-kblmFbJm.css
@@ -361,7 +361,6 @@ input:-webkit-autofill {
 
 .fade-out {
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
 }
 
 .modal-background {
@@ -739,6 +738,15 @@ p.rate > span {
   }
 }
 
+@keyframes slideUp {
+  from {
+    transform: translate(-50%, 100%);
+  }
+  to {
+    transform: translate(-50%, 0);
+  }
+}
+
 @media (max-width: 1280px) {
   .container {
     max-width: 1200px;
@@ -751,9 +759,9 @@ p.rate > span {
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
   .container {
-    max-width: 1000px;
+    max-width: 1024px;
     width: 100%;
     padding: 0 40px;
   }
@@ -864,28 +872,23 @@ p.rate > span {
     position: fixed;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, 100%);
     width: 100%;
     max-width: 600px;
     height: auto;
     max-height: 80%;
     border-radius: 16px 16px 0 0;
-    transition: transform 0.3s ease-out;
+    animation: slideUp 300ms ease-out forwards;
     overflow-y: auto;
   }
 
   .modal-info {
     align-items: center;
   }
-
-  .modal-background.active .modal {
-    transform: translate(-50%, 0);
-  }
 }
 
 @media (max-width: 680px) {
   .container {
-    max-width: 600px;
+    max-width: 680px;
   }
 
   .thumbnail-list {
